--- a/src/datasets/satellite.ipynb
+++ b/src/datasets/satellite.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,37 +37,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fetch the dataset, where the \n",
-    "# outliers are labeled with 1\n",
-    "# inliers are labeld with 0\n",
-    "spam_base = fetch_ucirepo(id=94) "
+    "# fetch the dataset\n",
+    "statlog_landsat_satellite = fetch_ucirepo(id=146) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the data and standardize it\n",
+    "X = statlog_landsat_satellite.data.features.to_numpy()\n",
+    "X = (X - np.mean(X, axis=0)) / np.std(X, axis=0)\n",
+    "\n",
+    "# get the labels\n",
+    "y = statlog_landsat_satellite.data.targets.to_numpy()\n",
+    "y = y.reshape(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Contamination rate: 0.394%\n"
+      "Class percentage: [0.         0.23822844 0.10924631 0.21103341 0.0972805  0.10986791\n",
+      " 0.         0.23434343]\n"
      ]
     }
    ],
    "source": [
-    "# get the data and standardize it\n",
-    "X = spam_base.data.features.to_numpy() \n",
-    "X = (X - np.mean(X, axis=0)) / np.std(X, axis=0)\n",
+    "# get the percentage of each class in the dataset\n",
+    "y_bins_norm = np.bincount(y) / y.shape[0]\n",
+    "print(f\"Class percentage: {y_bins_norm}\")\n",
     "\n",
-    "# get the labels\n",
-    "y = spam_base.data.targets.to_numpy()\n",
-    "y = y.reshape(-1)\n",
+    "# sort the classes by their percentage\n",
+    "y_bins_norm_sorted = np.sort(y_bins_norm)\n",
+    "y_bins_norm_sorted_idx = np.argsort(y_bins_norm)\n",
+    "\n",
+    "# compute the cumulative sum of the distribution percentage\n",
+    "y_bins_cum_sum = np.cumsum(y_bins_norm_sorted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classes used for outliers: [0 6 4 2 5]\n",
+      "Classes used for inliers: [3 7 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "target = 0.33\n",
+    "i = 0\n",
+    "\n",
+    "while y_bins_cum_sum[i] < target:\n",
+    "    i += 1\n",
+    "\n",
+    "y_outliers = y_bins_norm_sorted_idx[:i]\n",
+    "y_inliers = y_bins_norm_sorted_idx[i:]\n",
+    "\n",
+    "print(f\"Classes used for outliers: {y_outliers}\")\n",
+    "print(f\"Classes used for inliers: {y_inliers}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contamination rate: 0.3164%\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, cls in enumerate(y):\n",
+    "    if cls in y_inliers:\n",
+    "        y[i] = 0\n",
+    "    else:\n",
+    "        y[i] = 1 \n",
     "\n",
     "# compute the contamination rate\n",
     "contamination = np.round(np.sum(y == 1) / y.shape[0], 4)\n",
@@ -76,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -140,9 +206,9 @@
      "text": [
       "IForest:\n",
       "--------\n",
-      "AUROC 0.6137\n",
-      "AUPR 0.4726\n",
-      "Time 4.5179s\n"
+      "AUROC 0.6582\n",
+      "AUPR 0.5418\n",
+      "Time 4.1136s\n"
      ]
     }
    ],
@@ -158,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -167,9 +233,9 @@
      "text": [
       "IForest-U:\n",
       "--------\n",
-      "AUROC 0.6740\n",
-      "AUPR 0.5124\n",
-      "Time 23.5158s\n"
+      "AUROC 0.7130\n",
+      "AUPR 0.6103\n",
+      "Time 8.9876s\n"
      ]
     }
    ],
@@ -185,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -194,9 +260,9 @@
      "text": [
       "EIForest:\n",
       "--------\n",
-      "AUROC 0.5660\n",
-      "AUPR 0.4291\n",
-      "Time 10.3861s\n"
+      "AUROC 0.6878\n",
+      "AUPR 0.5841\n",
+      "Time 12.4717s\n"
      ]
     }
    ],
@@ -212,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -221,9 +287,9 @@
      "text": [
       "EIForest-U:\n",
       "--------\n",
-      "AUROC 0.6722\n",
-      "AUPR 0.5103\n",
-      "Time 103.5736s\n"
+      "AUROC 0.7234\n",
+      "AUPR 0.6059\n",
+      "Time 40.2775s\n"
      ]
     }
    ],
@@ -239,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -248,9 +314,9 @@
      "text": [
       "SCIForest:\n",
       "--------\n",
-      "AUROC 0.3593\n",
-      "AUPR 0.3405\n",
-      "Time 12.7269s\n"
+      "AUROC 0.6033\n",
+      "AUPR 0.5960\n",
+      "Time 12.5499s\n"
      ]
     }
    ],
@@ -266,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -275,9 +341,9 @@
      "text": [
       "SCIForest-U:\n",
       "--------\n",
-      "AUROC 0.4246\n",
-      "AUPR 0.3426\n",
-      "Time 254.8088s\n"
+      "AUROC 0.7331\n",
+      "AUPR 0.6715\n",
+      "Time 77.7249s\n"
      ]
     }
    ],
@@ -293,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -302,11 +368,9 @@
      "text": [
       "FCForest:\n",
       "--------\n",
-      "AUROC 0.6844\n",
-      "AUPR 0.5529\n",
-      "Time 78.7472s\n",
-      "[0.65613295 0.68533026 0.73353573 0.64634839 0.67485237 0.67078601\n",
-      " 0.69700438 0.70243889 0.70262129 0.67490866]\n"
+      "AUROC 0.7459\n",
+      "AUPR 0.6104\n",
+      "Time 55.4516s\n"
      ]
     }
    ],
@@ -322,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -331,9 +395,9 @@
      "text": [
       "OCSVM:\n",
       "--------\n",
-      "AUROC: 0.5369\n",
-      "AUPR: 0.3990\n",
-      "Time: 1.9410\n"
+      "AUROC: 0.6636\n",
+      "AUPR: 0.6550\n",
+      "Time: 4.6073\n"
      ]
     }
    ],
@@ -353,12 +417,12 @@
     "print(\"--------\")\n",
     "print(f\"AUROC: {auroc:.4f}\")\n",
     "print(f\"AUPR: {aupr:.4f}\")\n",
-    "print(f\"Time: {time_to_run:.4f}\")\n"
+    "print(f\"Time: {time_to_run:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -367,9 +431,9 @@
      "text": [
       "DIForest:\n",
       "--------\n",
-      "AUROC 0.5143\n",
-      "AUPR 0.3671\n",
-      "Time 18.1357s\n"
+      "AUROC 0.6470\n",
+      "AUPR 0.6226\n",
+      "Time 23.1105s\n"
      ]
     }
    ],
