added LOF in all datasets evaluation

--- a/src/datasets/satellite.ipynb
+++ b/src/datasets/satellite.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,12 +32,13 @@
     "from forests.rrc_forest import RRCForest\n",
     "\n",
     "from pyod.models.ocsvm import OCSVM\n",
-    "from pyod.models.dif import DIF"
+    "from pyod.models.dif import DIF\n",
+    "from pyod.models.lof import LOF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,6 +469,41 @@
     "print(f\"AUROC {np.mean(dif_aurocs):.4f}\")\n",
     "print(f\"AUPR {np.mean(dif_auprs):.4f}\")\n",
     "print(f\"Time {np.mean(dif_times):.4f}s\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOF:\n",
+      "--------\n",
+      "AUROC: 0.5457\n",
+      "AUPR: 0.3759\n",
+      "Time: 0.3519\n"
+     ]
+    }
+   ],
+   "source": [
+    "lof_ = LOF(contamination=contamination)\n",
+    "\n",
+    "start = time.time()\n",
+    "lof_.fit(X)\n",
+    "end = time.time()\n",
+    "\n",
+    "auroc = roc_auc_score(y, lof_.decision_scores_)\n",
+    "aupr = average_precision_score(y, lof_.decision_scores_)\n",
+    "time_to_run = end - start\n",
+    "\n",
+    "print(\"LOF:\")\n",
+    "print(\"--------\")\n",
+    "print(f\"AUROC: {auroc:.4f}\")\n",
+    "print(f\"AUPR: {aupr:.4f}\")\n",
+    "print(f\"Time: {time_to_run:.4f}\")"
    ]
   }
  ],
