--- a/src/datasets/spam_base.ipynb
+++ b/src/datasets/spam_base.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,12 +32,13 @@
     "from forests.rrc_forest import RRCForest\n",
     "\n",
     "from pyod.models.ocsvm import OCSVM\n",
-    "from pyod.models.dif import DIF"
+    "from pyod.models.dif import DIF\n",
+    "from pyod.models.lof import LOF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,6 +405,41 @@
     "print(f\"AUROC {np.mean(dif_aurocs):.4f}\")\n",
     "print(f\"AUPR {np.mean(dif_auprs):.4f}\")\n",
     "print(f\"Time {np.mean(dif_times):.4f}s\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOF:\n",
+      "--------\n",
+      "AUROC: 0.4577\n",
+      "AUPR: 0.3546\n",
+      "Time: 0.2623\n"
+     ]
+    }
+   ],
+   "source": [
+    "lof_ = LOF(contamination=contamination)\n",
+    "\n",
+    "start = time.time()\n",
+    "lof_.fit(X)\n",
+    "end = time.time()\n",
+    "\n",
+    "auroc = roc_auc_score(y, lof_.decision_scores_)\n",
+    "aupr = average_precision_score(y, lof_.decision_scores_)\n",
+    "time_to_run = end - start\n",
+    "\n",
+    "print(\"LOF:\")\n",
+    "print(\"--------\")\n",
+    "print(f\"AUROC: {auroc:.4f}\")\n",
+    "print(f\"AUPR: {aupr:.4f}\")\n",
+    "print(f\"Time: {time_to_run:.4f}\")"
    ]
   }
  ],
